Shell and lib modules (#2)
Update dependencies, and use spring-vault directly rather than spring-cloud-vault. Remove java code, only Kotlin now. Don't use spring bootstrap. Configure AWS SNS, SQS, and S3.
