# swagger/swagger.yaml
@@ -6,14 +6,6 @@ basePath: "/"
 schemes:
 - "http"
 paths:
-  /aws/sns/sts:
-    get:
-      summary: "Get creds for SNS"
-      description: "Prints AWS environment variables for SNS on the console."
-      operationId: "getSnsCreds"
-      responses:
-        204:
-          description: "successful operation"
   /aws/sns/{topicArn}:
     post:
       summary: "Publish to SNS"
@@ -56,7 +48,7 @@ paths:
             type: array
             items:
               type: string
-  /transit/encrypt/{key}:
+  /transit/encrypt:
     put:
       summary: "Encrypt text"
       description: "This endpoint encrypts the provided plaintext using the named key."
@@ -66,11 +58,6 @@ paths:
       consumes:
       - "text/plain"
       parameters:
-      - in: path
-        description: "Encryption key"
-        required: true
-        name: key
-        type: string
       - in: body
         name: plainText
         description: "Plain text to encrypt"
@@ -82,38 +69,7 @@ paths:
           description: "Successfully encrypted"
           schema:
             type: string
-  /transit/encrypt/convergent/{key}:
-    put:
-      summary: "Encrypt text using convergent key"
-      description: "This endpoint encrypts the provided plaintext using the named convergent key."
-      operationId: "putEncryptConvergent"
-      produces:
-      - "text/plain"
-      consumes:
-      - "text/plain"
-      parameters:
-      - in: path
-        description: "Convergent encryption key"
-        required: true
-        name: key
-        type: string
-      - in: header
-        description: "Encryption context"
-        required: true
-        name: context
-        type: string
-      - in: body
-        name: plainText
-        description: "Plain text to encrypt"
-        required: true
-        schema:
-          type: "string"
-      responses:
-        200:
-          description: "Successfully encrypted"
-          schema:
-            type: string
-  /transit/decrypt/{key}:
+  /transit/decrypt:
     put:
       summary: "Decrypt text"
       description: "This endpoint decrypts the provided ciphertext using the named key."
@@ -123,42 +79,6 @@ paths:
       consumes:
       - "text/plain"
       parameters:
-      - in: path
-        required: true
-        description: "Decryption key"
-        name: key
-        type: string
-      - in: body
-        name: cipherText
-        description: "Ciphertext to decrypt"
-        required: true
-        schema:
-          type: string
-      responses:
-        200:
-          description: "good"
-          schema:
-            type: string
-  /transit/decrypt/convergent/{key}:
-    put:
-      summary: "Decrypt text"
-      description: "This endpoint decrypts the provided ciphertext using the named convergent key."
-      operationId: "putDecryptConvergent"
-      produces:
-      - "text/plain"
-      consumes:
-      - "text/plain"
-      parameters:
-      - in: path
-        required: true
-        description: "Decryption key"
-        name: key
-        type: string
-      - in: header
-        description: "Encryption context"
-        required: true
-        name: context
-        type: string
       - in: body
         name: cipherText
         description: "Ciphertext to decrypt"
@@ -173,7 +93,7 @@ paths:
   /secret/list/{group}:
     get:
       summary: "List secrets"
-      description: "List the secrets saved in vault at path eg., use1-ucp-dev"
+      description: "List the secrets saved in vault at path"
       operationId: "getSecretListGroup"
       produces:
       - "application/json"
@@ -214,13 +134,6 @@ paths:
           schema:
             type: object
 definitions:
-  PublishRequest:
-    type: "object"
-    properties:
-      topicArn:
-        type: string
-      message:
-        type: string
   PublishResponse:
     type: "object"
     properties:
